--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+  min-height: 100vh;
   height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
