--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,5 +24,5 @@ code {
 }
 
 input.ag-input::placeholder {
-  @apply text-primary font-bold opacity-60;
+  @apply from-secondary via-primary to-secondary bg-gradient-to-r bg-clip-text text-transparent font-bold;
 }
